--- a/marco/templates/host/host.html
+++ b/marco/templates/host/host.html
@@ -1,28 +1,10 @@
 {% extends "/base.html" %}
+{% import "/utils.html" as utils %}
 
 {% block title %}
   Containers on {{ host.ip }}
 {% endblock %}
 
 {% block main %}
-  {% for container in containers %}
-    <div class="col-xs-6 col-md-4">
-      <a href="#" class="thumbnail btn btn-success">
-        <div class="caption">
-          <dl class="dl-horizontal">
-            <dt>容器ID</dt>
-            <dd>{{container.container_id[:7]}}</dd>
-            <dt>端口</dt>
-            <dd>{{container.port}}</dd>
-            <dt>应用名称</dt>
-            <dd>{{container.application.name}}</dd>
-            <dt>应用版本</dt>
-            <dd>{{container.application.version}}</dd>
-            <dt>Daemon</dt>
-            <dd>{{container.daemon_id or '-'}}</dd>
-          </dl>
-        </div>
-      </a>
-    </div>
-  {% endfor %}
+  {{ utils.containers_block(containers) }}
 {% endblock %}
