--- a/marco/templates/app/app_set.html
+++ b/marco/templates/app/app_set.html
@@ -37,6 +37,7 @@
             <td>
               <a href="{{ app.online_url() }}" target="_blank">
                 <i class="glyphicon glyphicon-circle-arrow-right"></i>
+                去看看
               </a>
             </td>
           </tr>
