--- a/marco/templates/app/index.html
+++ b/marco/templates/app/index.html
@@ -1,20 +1,22 @@
 {% extends "/base.html" %}
+{% import "/utils.html" as utils %}
 
 {% block title %}
   Marco Applications
 {% endblock %}
 
-{% block main %}
-  {% for app_name in app_names %}
-    <div class="col-xs-6 col-md-4">
-      <a href="{{ url_for('app.app_set_info', name=app_name) }}" class="thumbnail btn btn-success">
-        <div class="caption">
-          <dl class="dl-horizontal">
-              <dt>应用名</dt>
-              <dd>{{ app_name }}</dd>
-          </dl>
-        </div>
-      </a>
-    </div>
-  {% endfor %}
+{% block main_left %}
+  {{utils.left_bar(nav.app_sub_nav)}}
+{% endblock %}
+
+{% block main_right %}
+  <div class="list-group">
+    <li class="list-group-item list-group-item-info">应用列表</li>
+    {% for app_name in app_names %}
+      <li class="list-group-item">
+        <span class="glyphicon glyphicon-cloud-upload"></span>
+        <a href="{{url_for('app.app_set_info', name=app_name)}}">{{app_name}}</a>
+      </li>
+    {% endfor %}
+  </div>
 {% endblock %}
