--- a/marco/templates/base.html
+++ b/marco/templates/base.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="{{ url_for('host.index') }}" class="navbar-brand">Macro</a>
+          <a href="{{ url_for('host.index') }}" class="navbar-brand">Marco</a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
           <ul class="nav navbar-nav">
@@ -59,8 +59,17 @@
 
     <div class="container bs-docs-container">
       <div class="row">
-        {% block main %}{% endblock %}
-        {% block sidebar %}{% endblock %}
+      {% block main %}
+        <div class="col-md-3">
+          {% block main_left %}
+          {% endblock %}
+        </div>
+        <div class="col-md-9">
+          {% block main_right%}
+          {% endblock %}
+        </div>
+      {% endblock %}
+      {% block sidebar %}{% endblock %}
       </div>
     </div>
 
