--- a/marco/templates/app/app.html
+++ b/marco/templates/app/app.html
@@ -18,7 +18,18 @@
   {% endif %}
 
   <div class="text-left">
-    <button type="button" class="btn btn-info btn-build-image" data-url="{{url_for('app.app_build_image', name=app.name, version=app.version)}}">构建镜像</button>
+    <form class="form-inline" role="form">
+      <div class="form-group">
+        <select id="build-base" class="form-control">
+          <option value="docker-registry.intra.hunantv.com/nbeimage/ubuntu:python-2014.9.30">python-2014.9.30</option>
+          <option value="docker-registry.intra.hunantv.com/nbeimage/ubuntu:java-2014.10.11">java-2014.10.11</option>
+        </select>
+      </div>
+      <button type="button" class="btn btn-info btn-build-image" data-url="{{url_for('app.app_build_image', name=app.name, version=app.version)}}">构建镜像</button>
+    </form>
+  </div>
+
+  <div class="text-left app-block">
     <button type="button" class="btn btn-info btn-test-app" data-url="{{url_for('app.app_test_app', name=app.name, version=app.version)}}">测试应用</button>
     <button type="button" class="btn btn-info btn-add-container" data-url="{{url_for('app.app_add_container', name=app.name, version=app.version)}}">增加容器</button>
     <button type="button" class="btn btn-danger btn-remove-container" data-url="{{url_for('app.app_remove_app', name=app.name, version=app.version)}}">下线应用</button>
