--- a/marco/templates/app/app.html
+++ b/marco/templates/app/app.html
@@ -11,6 +11,22 @@
 
 {% block main_right %}
 
+  {% if tasks %}
+    <div class="list-group">
+      <div class="list-group-item list-group-item-info">活动列表</div>
+      {% for task in tasks %}
+        <div class="list-group-item">
+          <span class="label label-info">{{task.repr()}}</span>
+          {% if not task.succ %}
+            <span class="label label-success">成功</span>
+          {% else %}
+            <span class="label label-warning">失败</span>
+          {% endif %}
+        </div>
+      {% endfor %}
+    </div>
+  {% endif %}
+
   {% if ptasks %}
     <div class="alert alert-warning" role="alert">
       正在执行任务:
@@ -37,7 +53,7 @@
   <div class="text-left app-block">
     <button type="button" class="btn btn-info btn-test-app" data-url="{{url_for('app.app_test_app', name=app.name, version=app.version)}}">测试应用</button>
     <button type="button" class="btn btn-info btn-add-container" data-url="{{url_for('app.app_add_container', name=app.name, version=app.version)}}">增加容器</button>
-    <button type="button" class="btn btn-danger btn-remove-container" data-url="{{url_for('app.app_remove_app', name=app.name, version=app.version)}}">下线应用</button>
+    <button type="button" class="btn btn-warning btn-remove-container" data-url="{{url_for('app.app_remove_app', name=app.name, version=app.version)}}">下线应用</button>
   </div>
 
   <div class="app-block">
