--- a/marco/templates/task/task.html
+++ b/marco/templates/task/task.html
@@ -11,7 +11,9 @@
 
 {% block main_right %}
 
-  {% if st.success() %}
+  {% if st.processing() %}
+    <div class="alert alert-info" role="alert">正在执行...</div>
+  {% elif st.success() %}
     <div class="alert alert-success" role="alert">成功</div>
   {% else %}
     <div class="alert alert-warning" role="alert">失败</div>
