--- a/marco/templates/app/app.html
+++ b/marco/templates/app/app.html
@@ -66,6 +66,10 @@
     <button type="button" class="btn btn-warning btn-remove-container" data-url="{{url_for('app.app_remove_app', name=app.name, version=app.version)}}">下线应用</button>
   </div>
 
+  <div class="text-left app-block">
+    <button type="button" class="btn btn-info btn-sync-db" data-url="{{url_for('app.sync_database', name=app.name, version=app.version)}}">syncdb</button>
+  </div>
+
   <div class="app-block">
     {{utils.containers_list(app.containers)}}
   </div>
