--- a/marco/templates/app/app.html
+++ b/marco/templates/app/app.html
@@ -21,77 +21,103 @@
       <script>
         var gMetricsDatum = {
             cpu_usage: [],
-            mem_usage: [],
+            cpu_user: [],
+            cpu_system: [],
+
             net_recv: [],
-            net_send: []
+            net_send: [],
+            net_recv_err: [],
+            net_send_err: [],
+
+            mem_usage: [],
+            mem_rss: [],
         };
-        -function updateChart(limit) {
+        var gDatumTimestamp = {
+            cpu_usage: {},
+            cpu_user: {},
+            cpu_system: {},
+
+            net_recv: {},
+            net_send: {},
+            net_recv_err: {},
+            net_send_err: {},
+
+            mem_usage: {},
+            mem_rss: {},
+        };
+        -function updateCharts(limit) {
+            function updateGraph(selector, graphKeys, yMapF, yLabel) {
+                nv.addGraph(function() {
+                  var chart = nv.models.lineChart().options({
+                      margin: {left: 100, bottom: 100},
+                      padding: {left: 20, right: 20},
+                      x: function(d, i) {return i},
+                      showXAxis: true,
+                      showYAxis: true,
+                      transitionDuration: 25
+                  });
+
+                  chart.xAxis.axisLabel("Time").tickFormat(function(x) {
+                      var t = new Date(gMetricsDatum[graphKeys[0].keyName][x].x * 1000);
+                      return t.toTimeString().slice(0, 8);
+                  });
+
+                  chart.yAxis.axisLabel(yLabel).tickFormat(d3.format(',.2f'));
+
+                  var datum = graphKeys.map(function(e) {
+                      return {
+                          values: gMetricsDatum[e.keyName].map(function (e) {return {x: e.x * 1000, y: yMapF(e.y)};}),
+                          key: e.keyDisp,
+                          color: e.color
+                      }
+                  })
+                  d3.select(selector).datum(datum).call(chart);
+                  nv.utils.windowResize(chart.update);
+                  chart.dispatch.on('stateChange', function(e) {nv.log('New State:', JSON.stringify(e));});
+                  return chart;
+                });
+            }
+
             $.ajax({
                 url: '/ajax/app/{{ app.id }}/all_metrics?version={{ app.version|e }}&limit=' + limit,
                 type: 'GET',
                 success: function(r) {
-                    var i, j;
+                    var i, j, k, timestampGroup, timestamp;
                     for (i in r) {
-                        gMetricsDatum[i].shift();
                         r[i].reverse();
+                        timestampGroup = gDatumTimestamp[i];
                         for (j in r[i]) {
-                            gMetricsDatum[i].push({x: r[i][j][0], y: r[i][j][1]});
+                            timestamp = r[i][j][0];
+                            if (timestampGroup[timestamp]) {
+                                continue;
+                            }
+                            timestampGroup[timestamp] = true;
+
+                            gMetricsDatum[i].push({x: timestamp, y: r[i][j][1]});
+                        }
+                        for (k = gMetricsDatum[i].length - 100; 0 < k; --k) {
+                            gMetricsDatum[i].shift();
                         }
                     }
-                    nv.addGraph(function() {
-                      var chart = nv.models.lineChart().options({
-                          margin: {left: 100, bottom: 100},
-                          x: function(d, i) {return i},
-                          showXAxis: true,
-                          showYAxis: true,
-                          transitionDuration: 250
-                      });
-
-                      chart.xAxis
-                        .axisLabel("Time (s)")
-                        .tickFormat(function(x) {return d3.format(',')(x - 99)});
-
-                      chart.yAxis
-                        .axisLabel('Usage')
-                        .tickFormat(d3.format(',.2f'))
-                        ;
-
-                      d3.select('#usages_cpu')
-                        .datum([{
-                                   values: gMetricsDatum.cpu_usage.map(function(e) {return {y: e.y * 100};}),
-                                   key: 'CPU Usage (%)',
-                                   color: 'red'
-                               }])
-                        .call(chart);
-
-                      d3.select('#usages_mem')
-                        .datum([{
-                                   values: gMetricsDatum.mem_usage.map(function(e) {return {y: e.y / 1048576};}),
-                                   key: 'Mem Usage (MB)',
-                                   color: 'blue'
-                               }])
-                        .call(chart);
-
-                      d3.select('#usages_net')
-                        .datum([{
-                                   values: gMetricsDatum.net_recv.map(function(e) {return {y: e.y / 1024};}),
-                                   key: 'Net Send (KB)',
-                                   color: 'green'
-                               }, {
-                                   values: gMetricsDatum.net_send.map(function(e) {return {y: e.y / 1024};}),
-                                   key: 'Net Recv (KB)',
-                                   color: 'black'
-                               }])
-                        .call(chart);
-
-                      nv.utils.windowResize(chart.update);
-                      chart.dispatch.on('stateChange', function(e) {nv.log('New State:', JSON.stringify(e));});
-                      return chart;
-                    });
-                    setTimeout(function() {updateChart(1);}, 10000);
+                    updateGraph('#usages_cpu', [
+                        {keyName: 'cpu_user', keyDisp: 'User', color: 'green'},
+                        {keyName: 'cpu_system', keyDisp: 'System', color: 'navy'},
+                        {keyName: 'cpu_usage', keyDisp: 'Usage', color: 'black'}
+                    ], function(y) {return y * 100;}, 'CPU (%)');
+                    updateGraph('#usages_mem', [
+                        {keyName: 'mem_usage', keyDisp: 'Usage', color: 'green'},
+                        {keyName: 'mem_rss', keyDisp: 'RSS', color: 'navy'}
+                    ], function(y) {return y / 1048576;}, 'Memory (MB)');
+                    updateGraph('#usages_net', [
+                        {keyName: 'net_recv', keyDisp: 'Receive', color: 'green'},
+                        {keyName: 'net_send', keyDisp: 'Send', color: 'blue'},
+                        {keyName: 'net_recv_err', keyDisp: 'Receive Error', color: 'red'},
+                        {keyName: 'net_send_err', keyDisp: 'Send Error', color: 'purple'},
+                    ], function(y) {return y / 1048576;}, 'Net (KB)');
+                    setTimeout(function() {updateCharts(1);}, 10000);
                 }
             });
-        }(100);
+        }(30);
       </script>
   </div>
 
