--- a/marco/templates/app/app.html
+++ b/marco/templates/app/app.html
@@ -14,113 +14,6 @@
 {% endblock %}
 
 {% block main_right %}
-  <div class="app-block">
-      <div><p onclick='$(this).next().toggle()'>CPU 状况</p><svg id='usages_cpu'></svg></div>
-      <div><p onclick='$(this).next().toggle()'>内存状况</p><svg id='usages_mem'></svg></div>
-      <div><p onclick='$(this).next().toggle()'>网络状况</p><svg id='usages_net'></svg></div>
-      <script>
-        var gMetricsDatum = {
-            cpu_usage: [],
-            cpu_user: [],
-            cpu_system: [],
-
-            net_recv: [],
-            net_send: [],
-            net_recv_err: [],
-            net_send_err: [],
-
-            mem_usage: [],
-            mem_rss: [],
-        };
-        var gDatumTimestamp = {
-            cpu_usage: {},
-            cpu_user: {},
-            cpu_system: {},
-
-            net_recv: {},
-            net_send: {},
-            net_recv_err: {},
-            net_send_err: {},
-
-            mem_usage: {},
-            mem_rss: {},
-        };
-        -function updateCharts(limit) {
-            function updateGraph(selector, graphKeys, yMapF, yLabel) {
-                nv.addGraph(function() {
-                  var chart = nv.models.lineChart().options({
-                      margin: {left: 100, bottom: 100},
-                      padding: {left: 20, right: 20},
-                      x: function(d, i) {return i},
-                      showXAxis: true,
-                      showYAxis: true,
-                      transitionDuration: 25
-                  });
-
-                  chart.xAxis.axisLabel("Time").tickFormat(function(x) {
-                      var t = new Date(gMetricsDatum[graphKeys[0].keyName][x].x * 1000);
-                      return t.toTimeString().slice(0, 8);
-                  });
-
-                  chart.yAxis.axisLabel(yLabel).tickFormat(d3.format(',.2f'));
-
-                  var datum = graphKeys.map(function(e) {
-                      return {
-                          values: gMetricsDatum[e.keyName].map(function (e) {return {x: e.x * 1000, y: yMapF(e.y)};}),
-                          key: e.keyDisp,
-                          color: e.color
-                      }
-                  })
-                  d3.select(selector).datum(datum).call(chart);
-                  nv.utils.windowResize(chart.update);
-                  chart.dispatch.on('stateChange', function(e) {nv.log('New State:', JSON.stringify(e));});
-                  return chart;
-                });
-            }
-
-            $.ajax({
-                url: '/ajax/app/{{ app.id }}/all_metrics?version={{ app.version|e }}&limit=' + limit,
-                type: 'GET',
-                success: function(r) {
-                    var i, j, k, timestampGroup, timestamp;
-                    for (i in r) {
-                        r[i].reverse();
-                        timestampGroup = gDatumTimestamp[i];
-                        for (j in r[i]) {
-                            timestamp = r[i][j][0];
-                            if (timestampGroup[timestamp]) {
-                                continue;
-                            }
-                            timestampGroup[timestamp] = true;
-
-                            gMetricsDatum[i].push({x: timestamp, y: r[i][j][1]});
-                        }
-                        for (k = gMetricsDatum[i].length - 100; 0 < k; --k) {
-                            gMetricsDatum[i].shift();
-                        }
-                    }
-                    updateGraph('#usages_cpu', [
-                        {keyName: 'cpu_user', keyDisp: 'User', color: '#0c0'},
-                        {keyName: 'cpu_system', keyDisp: 'System', color: 'navy'},
-                        {keyName: 'cpu_usage', keyDisp: 'Usage', color: '#c80'}
-                    ], function(y) {return y * 100;}, 'CPU (%)');
-                    updateGraph('#usages_mem', [
-                        {keyName: 'mem_usage', keyDisp: 'Usage', color: '#c80'},
-                        {keyName: 'mem_rss', keyDisp: 'RSS', color: 'navy'}
-                    ], function(y) {return y / 1048576;}, 'Memory (MB)');
-                    updateGraph('#usages_net', [
-                        {keyName: 'net_recv', keyDisp: 'Receive', color: '#c80'},
-                        {keyName: 'net_send', keyDisp: 'Send', color: 'blue'},
-                        {keyName: 'net_recv_err', keyDisp: 'Receive Error', color: 'red'},
-                        {keyName: 'net_send_err', keyDisp: 'Send Error', color: 'purple'},
-                    ], function(y) {return y / 1048576;}, 'Net (KB)');
-                    setTimeout(function() {updateCharts(1);}, 10000);
-                }
-            });
-        }(30);
-      </script>
-  </div>
-
   {% if tasks %}
     <div class="list-group">
       <div class="list-group-item list-group-item-info">最近的活动列表</div>
@@ -171,6 +64,129 @@
     <button type="button" class="btn btn-info btn-test-app" data-url="{{url_for('ajax.app_test_app', app_id=app.id)}}">测试应用</button>
     <button type="button" class="btn btn-info btn-add-container" data-url="{{url_for('ajax.app_add_container', app_id=app.id)}}">增加容器</button>
     <button type="button" class="btn btn-warning btn-remove-container" data-url="{{url_for('ajax.app_remove_app', app_id=app.id)}}">下线应用</button>
+    <button type="button" class="btn btn-info" onclick='statsToggle(this)' style='float: right'>状态监测</button>
+    <div style='clear: both'></div>
+  </div>
+
+  <div class="app-block" id='app-stat' style='display: none;'>
+      <div><p onclick='$(this).next().toggle()'>CPU 状况</p><svg id='usages_cpu'></svg></div>
+      <div><p onclick='$(this).next().toggle()'>内存状况</p><svg id='usages_mem'></svg></div>
+      <div><p onclick='$(this).next().toggle()'>网络状况</p><svg id='usages_net'></svg></div>
+      <script>
+        var gStatsStarted = false;
+        function statsToggle(btn) {
+            $('#app-stat').slideToggle('fast');
+            if (gStatsStarted) {
+                return;
+            }
+            gStatsStarted = true;
+            $(btn).text('正在拉取数据');
+            var gMetricsDatum = {
+                cpu_usage: [],
+                cpu_user: [],
+                cpu_system: [],
+
+                net_recv: [],
+                net_send: [],
+                net_recv_err: [],
+                net_send_err: [],
+
+                mem_usage: [],
+                mem_rss: [],
+            };
+            var gDatumTimestamp = {
+                cpu_usage: {},
+                cpu_user: {},
+                cpu_system: {},
+
+                net_recv: {},
+                net_send: {},
+                net_recv_err: {},
+                net_send_err: {},
+
+                mem_usage: {},
+                mem_rss: {},
+            };
+            -function updateCharts(limit) {
+                function updateGraph(selector, graphKeys, yMapF, yLabel) {
+                    nv.addGraph(function() {
+                      var chart = nv.models.lineChart().options({
+                          margin: {left: 100, bottom: 100},
+                          padding: {left: 20, right: 20},
+                          x: function(d, i) {return i},
+                          showXAxis: true,
+                          showYAxis: true,
+                          transitionDuration: 25
+                      });
+
+                      chart.xAxis.axisLabel("Time").tickFormat(function(x) {
+                          var t = new Date(gMetricsDatum[graphKeys[0].keyName][x].x * 1000);
+                          return t.toTimeString().slice(0, 8);
+                      });
+
+                      chart.yAxis.axisLabel(yLabel).tickFormat(d3.format(',.2f'));
+
+                      var datum = graphKeys.map(function(e) {
+                          return {
+                              values: gMetricsDatum[e.keyName].map(function (e) {return {x: e.x * 1000, y: yMapF(e.y)};}),
+                              key: e.keyDisp,
+                              color: e.color
+                          }
+                      })
+                      d3.select(selector).datum(datum).call(chart);
+                      nv.utils.windowResize(chart.update);
+                      chart.dispatch.on('stateChange', function(e) {nv.log('New State:', JSON.stringify(e));});
+                      return chart;
+                    });
+                }
+
+                $.ajax({
+                    url: '/ajax/app/{{ app.id }}/all_metrics?version={{ app.version|e }}&limit=' + limit,
+                    type: 'GET',
+                    success: function(r) {
+                        var i, j, k, timestampGroup, timestamp;
+                        for (i in r) {
+                            r[i].reverse();
+                            timestampGroup = gDatumTimestamp[i];
+                            for (j in r[i]) {
+                                timestamp = r[i][j][0];
+                                if (timestampGroup[timestamp]) {
+                                    continue;
+                                }
+                                timestampGroup[timestamp] = true;
+
+                                gMetricsDatum[i].push({x: timestamp, y: r[i][j][1]});
+                            }
+                            for (k = gMetricsDatum[i].length - 100; 0 < k; --k) {
+                                gMetricsDatum[i].shift();
+                            }
+                        }
+                        updateGraph('#usages_cpu', [
+                            {keyName: 'cpu_user', keyDisp: 'User', color: '#0c0'},
+                            {keyName: 'cpu_system', keyDisp: 'System', color: 'navy'},
+                            {keyName: 'cpu_usage', keyDisp: 'Usage', color: '#c80'}
+                        ], function(y) {return y * 100;}, 'CPU (%)');
+                        updateGraph('#usages_mem', [
+                            {keyName: 'mem_usage', keyDisp: 'Usage', color: '#c80'},
+                            {keyName: 'mem_rss', keyDisp: 'RSS', color: 'navy'}
+                        ], function(y) {return y / 1048576;}, 'Memory (MB)');
+                        updateGraph('#usages_net', [
+                            {keyName: 'net_recv', keyDisp: 'Receive', color: '#c80'},
+                            {keyName: 'net_send', keyDisp: 'Send', color: 'blue'},
+                            {keyName: 'net_recv_err', keyDisp: 'Receive Error', color: 'red'},
+                            {keyName: 'net_send_err', keyDisp: 'Send Error', color: 'purple'},
+                        ], function(y) {return y / 1048576;}, 'Net (KB)');
+                        setTimeout(function() {updateCharts(1);}, 10000);
+                        $(btn).text('状态检测');
+                    },
+                    error: function(r) {
+                        $(btn).text('拉取数据失败, 刷新页面以重试').click(function() {});
+                        $('#app-stat').hide();
+                    }
+                });
+            }(30);
+        }
+      </script>
   </div>
 
   <div class="text-left app-block">
