--- a/marco/templates/app/app_settings.html
+++ b/marco/templates/app/app_settings.html
@@ -6,19 +6,82 @@
 {% endblock %}
 
 {% block main_right %}
-  <form class="form-horizontal" role="form" action="{{url_for('app.app_settings', name=name)}}" method="post">
+  {% call utils.panel_div('info', 'Gitlab Hook 设置') %}
+    <form class="form-horizontal" role="form" action="{{url_for('app.settings', appname=appname)}}" method="post">
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Hook Branch</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" name="branch" placeholder="{{hook_branch}}">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-default">修改</button>
+        </div>
+      </div>
+    </form>
+  {% endcall %}
+  {% call utils.panel_div('info', 'NBE 存储资源设置') %}
+    {{resource(config, '存储资源')}}
+  {% endcall %}
+{% endblock %}
+
+{% macro resource(rs, name) %}
+  {% if rs %}
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Host</th>
+          <th>Port</th>
+          <th>DB</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for key, r in rs.iteritems() %}
+          <tr>
+            <td>{{key}}</td>
+            <td>{{r['host']}}</td>
+            <td>{{r['port']}}</td>
+            <td>{{r['db']}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% else %}
+    你还没有{{name}}实例
+  {% endif %}
+  <form class="form-horizontal" role="form" action="{{url_for('app.add_resource', appname=appname)}}" method="post">
     <div class="form-group">
-      <label for="inputEmail3" class="col-sm-2 control-label">Hook Branch</label>
+      <label class="col-sm-2 control-label">名字</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" name="branch" placeholder="{{hook_branch}}">
+        <input type="text" class="form-control" name="name">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-2 control-label">环境</label>
+      <div class="col-sm-10">
+        <select name="env" class="form-control">
+          <option value="test">测试</option>
+          <option value="prod">线上</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-2 control-label">存储</label>
+      <div class="col-sm-10">
+        <select name="resource" class="form-control">
+          <option value="mysql">MySQL</option>
+          <option value="redis">Redis</option>
+        </select>
       </div>
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">修改</button>
+        <button type="submit" class="btn btn-default">增加</button>
       </div>
     </div>
   </form>
-{% endblock %}
+{% endmacro %}
 
 {# vim:set ft=jinja: #}
