--- a/marco/templates/app/app_settings.html
+++ b/marco/templates/app/app_settings.html
@@ -51,37 +51,44 @@
   {% else %}
     你还没有{{name}}实例
   {% endif %}
-  <form class="form-horizontal" role="form" action="{{url_for('app.add_resource', appname=appname)}}" method="post">
-    <div class="form-group">
-      <label class="col-sm-2 control-label">名字</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" name="name">
+
+  <button class="btn btn-info" data-toggle="modal" data-target="#resource">增加资源实例</button>
+
+  {% call utils.modal('resource', '增加一个资源实例', '增加', '取消', 'btn-add-res', True) %}
+    <form class="form-horizontal" role="form" action="{{url_for('app.add_resource', appname=appname)}}" method="post">
+      <div class="form-group">
+        <label class="col-sm-2 control-label">名字</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" name="name">
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label class="col-sm-2 control-label">环境</label>
-      <div class="col-sm-10">
-        <select name="env" class="form-control">
-          <option value="test">测试</option>
-          <option value="prod">线上</option>
-        </select>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">环境</label>
+        <div class="col-sm-10">
+          <select name="env" class="form-control">
+            <option value="test">测试</option>
+            <option value="prod">线上</option>
+          </select>
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label class="col-sm-2 control-label">存储</label>
-      <div class="col-sm-10">
-        <select name="resource" class="form-control">
-          <option value="mysql">MySQL</option>
-          <option value="redis">Redis</option>
-        </select>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">存储</label>
+        <div class="col-sm-10">
+          <select name="resource" class="form-control">
+            <option value="mysql">MySQL</option>
+            <option value="redis">Redis</option>
+          </select>
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">增加</button>
-      </div>
-    </div>
-  </form>
+    </form>
+    <script>
+      $(document).ready(function() {
+          $('.btn-add-res').click(function() {
+            $('form').submit();
+          });
+      });
+    </script>
+  {% endcall %}
 {% endmacro %}
 
 {# vim:set ft=jinja: #}
