--- a/marco/templates/index.html
+++ b/marco/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "/base.html" %}
+{% import "/utils.html" as utils %}
 
 {% block title %}
   Marco Startup
@@ -6,26 +7,86 @@
 
 {% block main_left %}
   <div class="list-group">
-    <a class="list-group-item" href="{{url_for('manage.import_app')}}">导入已有项目</a>
-    <a class="list-group-item" href="{{url_for('manage.create_app')}}">创建新项目</a>
+    <a class="list-group-item" data-toggle="modal" data-target="#import" href="#">导入已有项目</a>
+    <a class="list-group-item" data-toggle="modal" data-target="#create" href="#">创建新项目</a>
     <a class="list-group-item" href="{{url_for('app.index')}}">看看已有项目</a>
   </div>
 {% endblock %}
 
 {% block main_right %}
-  <ul>
-    <li>
-      <p>导入一个已有的Gitlab上的项目, 但是你要注意, 项目必须已经<mark>至少有一个分支.</mark></p>
-      <p>那种点进去告诉你怎么样添加一个README的是不行的.</p>
-    </li>
-    <li>
-      <p>直接创建一个新的项目, 会同时帮你创建Gitlab上的repo, 但是并没有app.yaml.</p>
-      <p><del>不知道Gitlab会不会给类似的API去push一个. Gitlab是渣渣.</del></p>
-    </li>
-    <li>
-      <p>看看已有项目吧, 但是不一定每个都可以看到详细信息.</p>
-    </li>
-  </ul>
+  {% call utils.modal('create', '创建新项目', '提交', '取消', 'btn-create-app', sync=False) %}
+    <form class="form-horizontal" role="form">
+      <div class="form-group">
+        <label class="col-sm-2 control-label">应用名字</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" name="name">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">运行环境</label>
+        <div class="col-sm-10">
+          <select id="" class="form-control" name="runtime">
+            <option value="python">Python</option>
+            <option value="java">Java</option>
+            <option value="php">PHP</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">名字空间</label>
+        <div class="col-sm-10">
+          <select id="" class="form-control" name="namespace">
+            <option value="">{{g.user.username}}</option>
+            {% for ns in namespaces %}
+              <option value="{{ns['id']}}">{{ns['name']}}</option>
+            {% endfor %}
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10 error-display">
+        </div>
+      </div>
+    </form>
+  {% endcall %}
+  {% call utils.modal('import', '导入已有项目', '提交', '取消', 'btn-import-app', sync=False) %}
+    <form class="form-horizontal" role="form">
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Gitlab地址</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" name="addr">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">运行环境</label>
+        <div class="col-sm-10">
+          <select id="" class="form-control" name="runtime">
+            <option value="python">Python</option>
+            <option value="java">Java</option>
+            <option value="php">PHP</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" name="appyaml">
+              帮我创建一个app.yaml (需要你的仓库已经有分支了, 空仓库创建会失败)
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10 error-display">
+        </div>
+      </div>
+    </form>
+  {% endcall %}
+{% endblock %}
+
+{% block bottom_script %}
+  <script type="text/javascript" src="/marco/static/js/manage.js"></script>
 {% endblock %}
 
 {# vim:set ft=jinja: #}
