--- a/marco/templates/app/app.html
+++ b/marco/templates/app/app.html
@@ -51,6 +51,7 @@
     <form class="form-inline" role="form">
       <div class="form-group">
         <select id="build-base" class="form-control">
+          <option value="auto">根据runtime自动选</option>
           <option value="docker-registry.intra.hunantv.com/nbeimage/ubuntu:python-2014.11.28">python-2014.11.28</option>
           <option value="docker-registry.intra.hunantv.com/nbeimage/ubuntu:java-2014.11.28">java-2014.11.28</option>
           <option value="docker-registry.intra.hunantv.com/nbeimage/ubuntu:nodejs-2014.12.1">nodejs-2014.12.1</option>
