--- a/marco/templates/base.html
+++ b/marco/templates/base.html
@@ -19,7 +19,7 @@
 
   <body style="padding-top: 50px;">
     <!-- Docs master nav -->
-    <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+    <header class="navbar navbar-default navbar-fixed-top bs-docs-nav" role="banner">
       <div class="container">
         <div class="navbar-header">
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
@@ -31,14 +31,25 @@
           <a href="{{ url_for('host.index') }}" class="navbar-brand">Marco</a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-          <ul class="nav navbar-nav">
+          <div class="nav navbar-nav">
             {% for item in nav.marco_nav%}
               <li class="{{'active' if item.is_active else ''}}">
                 <a href="{{item.url}}">{{item.label}}</a>
               </li>
             {% endfor %}
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
+          </div>
+          <div class="nav navbar-nav navbar-right">
+            <li><a href="#" id="dot-switcher">{{g.dot_env}}</a></li>
+            <script>
+              $(document).ready(function (){
+                $('#dot-switcher').click(function (e){
+                  e.preventDefault();
+                  $.post('{{url_for("env.set_dot_env")}}', {}, function (r){
+                    $('#dot-switcher').html(r.env);
+                  });
+                });
+              });
+            </script>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{g.user.username or '未登录'}} <b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -49,7 +60,7 @@
                 {% endif %}
               </ul>
             </li>
-          </ul>
+          <div>
         </nav>
       </div>
     </header>
