--- a/marco/templates/utils.html
+++ b/marco/templates/utils.html
@@ -66,9 +66,9 @@
           </div>
           <span class="label label-success" style="margin-left: 36px;">name: {{container.application.name}}</span>
         {% else %}
-          <span class="label label-success">name: {{container.application.name}}</span>
+          <span class="label label-success">name: {{container.app_name}}</span>
         {% endif %}
-        <span class="label label-success">version: {{container.application.version}}</span>
+        <span class="label label-success">version: {{container.version}}</span>
         <span class="label label-success">host: {{container.host.ip}}</span>
         <span class="label label-success">port: {{container.port}}</span>
         <span class="glyphicon glyphicon-cloud-download"></span>
